Add autocapitalize to civicoInput field
Added autocapitalize attribute to civicoInput.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           inputmode="numeric"
           placeholder="N°"
           autocomplete="off"
+          autocapitalize="characters"
         />
       </div>
       <button id="addBtn">AGGIUNGI PACCO</button>
@@ -86,3 +87,4 @@
     <script src="app.js"></script>
   </body>
 </html>
+
