--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </select>
         <input
           type="text"
-          id="civicoInput"          
+          id="civicoInput"
           placeholder="N°"
           autocomplete="off"
-          autocapitalize="characters"
+          autocapitalize="none"
         />
       </div>
       <button id="addBtn">AGGIUNGI PACCO</button>
@@ -86,5 +86,3 @@
     <script src="app.js"></script>
   </body>
 </html>
-
-
