Add input for number of packages in delivery form
Added input field for number of packages.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
           autocomplete="off"
           autocapitalize="none"
         />
+        <input
+          type="number"
+          id="pacchiInput"
+          placeholder="Pacchi"
+          style="width: 70px"
+          min="1"
+        />
       </div>
       <button id="addBtn">AGGIUNGI PACCO</button>
     </div>
