Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <option value="" disabled selected>Seleziona Via...</option>
         </select>
       
-          <input type="text" inputmode="numeric" pattern="[0-9a-zA-Z]*" id="civicoInput" placeholder="N°" autocapitalize="none">
+          <input type="text" id="civicoInput" placeholder="N°" autocapitalize="none">
           <input type="number" id="pacchiInput" placeholder="Pz" min="1">
    
       </div>
@@ -83,6 +83,7 @@
     <script src="app.js"></script>
   </body>
 </html>
+
 
 
 
